test: missing error cases for grantAccess